# subconscious

./: .gitignore  README.md  cli.py  config.py  demo.py  server.py  start.py
backend/: demo.py  pyproject.toml  server.py
backend/microsubconscious/: __init__.py  demo_layer.py  engine.py
backend/subconscious/: __init__.py
backend/subconscious/adapters/: ollama.py
backend/subconscious/core/: config.py  mind.py  types.py
backend/subconscious/creative/: __init__.py
backend/subconscious/graph/: cognitive.py
backend/subconscious/memory/: __init__.py  chat_db.py  episodic.py  procedural.py  semantic.py  working.py
backend/subconscious/processor/: __init__.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
microsubconscious/: demo.py  layer.py  mind.py
subconscious/: associations.py  dream.py  engine.py
subconscious/adapters/: __init__.py  base.py
subconscious/core/: __init__.py  mind.py
subconscious/creative/: engine.py
subconscious/graph/: __init__.py  cognitive.py
subconscious/memory/: manager.py
subconscious/processor/: dream.py
web/: index.html
