[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subconscious"
version = "2.0.0-alpha.1"
description = "🧠 AI Subconscious — Model-agnostic cognitive middleware for AI systems"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Ahmet" },
]
keywords = ["ai", "subconscious", "cognitive", "memory", "creativity", "llm", "middleware"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "networkx>=3.0",
    "chromadb>=0.4.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
ollama = ["ollama>=0.3.0"]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.30.0"]
all-adapters = ["ollama>=0.3.0", "openai>=1.0.0", "anthropic>=0.30.0"]
dashboard = ["fastapi>=0.110.0", "uvicorn>=0.27.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23.0", "ruff>=0.3.0"]

[project.urls]
Homepage = "https://github.com/Hoxofp/subconscious"
Repository = "https://github.com/Hoxofp/subconscious"

[tool.hatch.build.targets.wheel]
packages = ["subconscious"]

[tool.ruff]
target-version = "py310"
line-length = 100
